--- a/surf app api/style.css
+++ b/surf app api/style.css
@@ -103,7 +103,7 @@ section {
     flex-direction: column;
 }
 
-.beach {
+#beach {
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
