complete vanilla prototype
complete vanilla prototype (No alarm setting just the fetch and raw data handling);
to be continued in React........

--- a/surf app api/style.css
+++ b/surf app api/style.css
@@ -74,6 +74,22 @@ body {
     color: aquamarine;
 }
 
+#menu_list {
+    position: relative;
+    margin-top: 3vh;
+   
+}
+
+#newBeachForm {
+    position: absolute;
+    bottom: 10%;
+    
+}
+
+#newBeachLabel {
+    font-size: 1.25rem;
+}
+
 
 section {    
     width: 100vw;
