--- a/surf app api/style.css
+++ b/surf app api/style.css
@@ -9,13 +9,18 @@
     --BeachImage: url(images/wavephoto.svg);
 } 
 
+
+
 body {    
     height: 100vh;
     width:100vw;
     margin: 0%;
     padding:0%;
-    
+      
 }
+
+
+
 .container {
     border-radius: 7%;
     max-width:100vw;
@@ -230,5 +235,37 @@ section {
     left:-7.25%;
     width:105%;
     height:auto;
+}
+
+#rotate_screen {
+    position: relative;
+    display: flex;
+    align-items: center;
+    left:17vw;
+    width:60vw;
+    height:60vw;
+}
+
+@media screen and (orientation:portrait){
+    #rotate_screen {
+        display: none;
+    }
+}
+
+
+@media screen and (orientation: landscape) {
+    body {
+        width:100vw;
+        height:100vh;
+        background-image: url(images/wavephoto2noText.svg); 
+        background-size: cover;
+        
+    }   
+
+    .container {
+        display: none;
+    } 
+
+
 }
 
